--- a/app/src/main/res/layout/gravity.xml
+++ b/app/src/main/res/layout/gravity.xml
@@ -1,27 +1,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-	<Button  
+
+	<Button
 		android:id="@+id/button01"
-	    android:layout_width="wrap_content" 
-	    android:layout_height="wrap_content" 
-	    android:layout_gravity="left"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="top"
 	    android:text="left"
 	    />
-	<Button  
+
+	<Button
 		android:id="@+id/button02"
-	    android:layout_width="wrap_content" 
-	    android:layout_height="wrap_content" 
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
 	    android:layout_gravity="center"
 	    android:text="center"
 	    />
-	<Button  
+
+	<Button
 		android:id="@+id/button03"
-	    android:layout_width="wrap_content" 
-	    android:layout_height="wrap_content" 
-	    android:layout_gravity="right"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="bottom"
 	    android:text="right"
 	    />
+
 </LinearLayout>
