--- a/app/src/main/res/layout/normal.xml
+++ b/app/src/main/res/layout/normal.xml
@@ -1,5 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 	<Button  
@@ -10,11 +10,13 @@
 	<Button  
 		android:id="@+id/button02"
 	    android:layout_width="wrap_content" 
-	    android:layout_height="wrap_content" 
+	    android:layout_height="wrap_content"
+		android:layout_marginLeft="10dp"
 	    android:text="Button02" />
 	<Button  
 		android:id="@+id/button03"
 	    android:layout_width="wrap_content" 
-	    android:layout_height="wrap_content" 
+	    android:layout_height="wrap_content"
+		android:layout_marginTop="20dp"
 	    android:text="Button03" />
 </LinearLayout>
