--- a/app/src/main/res/layout/padding.xml
+++ b/app/src/main/res/layout/padding.xml
@@ -22,7 +22,9 @@
 	    android:text="텍스트"
 	    android:textColor="#ffff0000"
 	    android:textSize="24dp"
-	    android:layout_margin="20dp"
+	    android:layout_marginTop="10dp"
+		android:layout_marginLeft="20dp"
+		android:layout_marginRight="30dp"
 	    />
 	<Button  
 		android:id="@+id/button03"
